fix: x overflow
- in settings and new cards view
- hiding horizontal scrollbars in tab and rich text editor toolbar

--- a/src/style/Tabs.module.css
+++ b/src/style/Tabs.module.css
@@ -8,6 +8,12 @@
 .list {
   flex-wrap: nowrap;
   overflow-x: auto;
+
+  scrollbar-width: 0; /* Firefox */
+  &::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+  }
+  
   &:after {
     content: "";
     position: absolute;
